Agregada la opción de navvegar hacia atrás

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetalleContacto"></activity>
+        <activity android:name=".DetalleContacto" android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
